Moved video player code into own file. Improved video type and element detection. Fixed overlapping controls for Stories. Unfinished: Broke auto-un-mute and volume storage.

--- a/content/style.css
+++ b/content/style.css
@@ -17,6 +17,10 @@
     background: rgba(0, 0, 0, 0.35);
 }
 
+.videoControlsInStory {
+    background: rgba(38,38,38,.6);
+}
+
 .videoControlElement {
     margin: 4px;
 }
